# FMM

./: .gitignore  README.md  pyproject.toml  questions.md  requirements-cuda12.txt  requirements.txt
data/testSim/: simInfo.yaml
data/testSim/directSummation/: frame_0000.vtp  frame_0001.vtp  frame_0002.vtp  frame_0003.vtp  frame_0004.vtp  frame_0005.vtp  frame_0006.vtp  frame_0007.vtp  frame_0008.vtp  frame_0009.vtp  frame_0010.vtp  frame_0011.vtp  frame_0012.vtp  frame_0013.vtp  frame_0014.vtp  frame_0015.vtp  frame_0016.vtp  frame_0017.vtp  frame_0018.vtp  frame_0019.vtp  frame_0020.vtp  frame_0021.vtp  frame_0022.vtp  frame_0023.vtp  frame_0024.vtp  frame_0025.vtp  frame_0026.vtp  frame_0027.vtp  frame_0028.vtp  frame_0029.vtp  frame_0030.vtp  frame_0031.vtp  frame_0032.vtp  frame_0033.vtp  frame_0034.vtp  frame_0035.vtp  frame_0036.vtp  frame_0037.vtp  frame_0038.vtp  frame_0039.vtp  (+4961 more)
praesentation/: structure.txt
src/: directSummationSimulation.py  main.py  simulationBase.py
src/blender/: generateTrajectory.py  particles_test.py  readTrajectory.py  readTrajectoryHeatmap.py
src/fmm/: kernels.py
src/geolib/: cell.py  coordinates.py  expansionCentres.py  oct_tree.py  tree.py
src/physlib/: densityModels.py  entities.py
src/sim/: OctTree.py  cell.py  coordinates.py  kernels.py  particle.py  utils.py
src/simlib/: acceptanceCriterion.py  directSummation.py  kernels.py  simulators.py
src/utils/: data.py  dataIO.py  heatmap.py  io.py  performanceTest.py  visualization.py
