[project]
name = "fmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jax>=0.5.3",
    "matplotlib>=3.9.4",
    "miniball>=1.2.0",
    "morton-py>=1.3",
    "numpy>=2.0.2",
    "opencv-python~=4.11.0.86",
    "pandas~=2.2.3",
    "pyyaml>=6.0.2",
    "scipy~=1.15.2",
    "tqdm>=4.67.1",
    "typing~=3.7.4.3",
    "typing-extensions>=4.8.0",
    "vtk>=9.4.1",
]

[tool.pyright]
include = ["src"]

[project.scripts]
hello = "src:hello"
